crates/bijux-policies/tests/snapshots/crate_docs_tree_contract.snap
---
source: crates/bijux-policies/tests/surface/docs_tree_contract.rs
expression: crate_docs_tree_contract
---
[bijux-analyze]
ARCHITECTURE.md
PERFORMANCE_BUDGET.md
SCOPE.md
[bijux-api]
ARCHITECTURE.md
SCOPE.md
[bijux-benchmark]
ARCHITECTURE.md
SCOPE.md
[bijux-benchmark-model]
ARCHITECTURE.md
SCOPE.md
[bijux-cli]
ARCHITECTURE.md
SCOPE.md
[bijux-core]
ARCHITECTURE.md
SCOPE.md
[bijux-domain-bam]
ARCHITECTURE.md
SCOPE.md
[bijux-domain-fastq]
ARCHITECTURE.md
SCOPE.md
[bijux-engine]
SCOPE.md
[bijux-environment]
ARCHITECTURE.md
SCOPE.md
[bijux-environment-qa]
ARCHITECTURE.md
RUNBOOK.md
SCOPE.md
[bijux-infra]
ARCHITECTURE.md
SCOPE.md
[bijux-pipelines]
ARCHITECTURE.md
SCOPE.md
[bijux-planner-bam]
ARCHITECTURE.md
SCOPE.md
[bijux-planner-fastq]
ARCHITECTURE.md
SCOPE.md
[bijux-policies]
ARCHITECTURE.md
SCOPE.md
[bijux-runner]
ARCHITECTURE.md
SCOPE.md
[bijux-runtime]
ARCHITECTURE.md
SCOPE.md
[bijux-stage-contract]
ARCHITECTURE.md
CONTRACT.md
SCOPE.md
[bijux-stages-bam]
ARCHITECTURE.md
SCOPE.md
[bijux-stages-fastq]
ARCHITECTURE.md
SCOPE.md
[bijux-testkit]
ARCHITECTURE.md
SCOPE.md
