crates/bijux-policies/tests/snapshots/docs_tree_contract.snap
---
source: crates/bijux-policies/tests/surface/docs_tree_contract.rs
expression: docs_tree_contract
---
.DS_Store
00-intro/DOCS_MAP.md
00-intro/DOC_PROMISES.md
00-intro/GLOSSARY.md
00-intro/QUICKSTART.md
00-intro/REFUSALS.md
00-intro/SCOPE.md
00-intro/WHAT_IS_BIJUX.md
10-architecture/ANTI_PATTERNS.md
10-architecture/ARCHITECTURE_LITMUS.md
10-architecture/ARCHITECTURE_OVERVIEW.md
10-architecture/BOUNDARY_DIAGRAM.md
10-architecture/BOUNDARY_MAP.md
10-architecture/CONTRACTS/ARTIFACTS.md
10-architecture/CONTRACTS/RUN_OUTPUT.md
10-architecture/CONTRACT_SPINE.md
10-architecture/DATAFLOW.md
10-architecture/DEPENDENCY_RULES.md
10-architecture/SSOT.md
20-science/TOOL_INDEX.md
20-science/bam/REFERENCES.md
20-science/bam/STAGE_CATALOG.md
20-science/bam/TOOLS_ROSTER.md
20-science/fastq/GOLD_PIPELINE_SPEC.md
20-science/fastq/REFERENCES.md
20-science/fastq/SCIENTIFIC_SPEC.md
20-science/fastq/STAGE_CATALOG.md
20-science/fastq/TOOLS_ROSTER.md
30-operations/CI.md
30-operations/CONTAINERS.md
30-operations/EXPLAINABILITY.md
30-operations/REPORT_CONTRACT.md
30-operations/RUN_ARTIFACTS.md
30-operations/SECURITY.md
30-operations/SECURITY_POLICY.md
40-policies/DEVELOPER_WORKFLOW.md
40-policies/POLICIES_EXPLAINED.md
40-policies/POLICY_MATRIX.md
40-policies/STYLE.md
50-reference/BIJUX_ANALYZE_CONTRACT.md
50-reference/BIJUX_CONTRACT.md
50-reference/CONTRACT_COMPATIBILITY.md
50-reference/CONTRACT_VERSIONING.md
50-reference/CRATE_MAP.md
50-reference/DESIGN_AUTHORITY.md
50-reference/DOMAIN_TEMPLATE_CHECKLIST.md
50-reference/PIPELINES.md
index.md
